# computer-graphics-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_old.cpp
headers/: BaseProject.hpp
shaders/: frag.spv  shader.frag  shader.vert  shader_compiler.bat  vert.spv
shaders/sky/: frag.spv  shader.frag
